app-python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  externalTrafficPolicy: Local 
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30001
