app-python/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
  - Ingress
  ingress:
  # Règle 1 : Autoriser Prometheus (pour les graphs)
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 5000
  # Règle 2 : Autoriser le trafic extérieur (ton navigateur)
  - from:
    - ipBlock:
        cidr: 192.168.1.103/32 
    # 2. Autorise les IPs internes de K3s (pour la VM elle-même)    
    - ipBlock:
        cidr: 192.168.1.104/32 # Réseau des Pods K3s
   # - ipBlock:
    #    cidr: 10.42.0.0/16 # Réseau des Pods K3s
    ports:
    - protocol: TCP
      port: 5000
